<resources>
    <string name="app_name">EcoLife</string>
    <string name="welcometxt">Welcome to </string>
    <string name="onboarding_desc1">Your journey to a sustainable lifestyle starts here.</string>
    <string name="pagi1">…</string>
    <string name="next">Next</string>
    <string name="excellent_">Excellent!!!</string>
    <string name="task">Today\'s Task</string>
    <string name="onboarding_desc2">your moves getting better day by day!!</string>
    <string name="progresstxt">Last 3 day Progress</string>
    <string name="onboarding_desc3">Sometimes <b>Small actions </b> can make <b>Big difference</b>.</string>
    <string name="getstarted">Get Started</string>
    <string name="task1">Water the plants</string>
    <string name="task2">Dispose trashes separately</string>
    <string name="task3">Feed few animals</string>
    <string name="logo">logo</string>
    <string name="welcomebacktxt">Welcome back!</string>
    <string name="email">Enter Email…</string>
    <string name="enter_password">Enter Password…</string>
    <string name="login">Login</string>
    <string name="emailonly">Email</string>
    <string name="newuser">Don\'t have an account?\n<b>Register</b></string>
    <string name="home">home</string>
    <string name="tips">tips</string>
    <string name="goal">goal</string>
    <string name="profile">me</string>
    <string name="quote">" Save water by taking shorter showers. \nEvery drop counts!"</string>
    <string name="head1">Today\'s Eco Tip!</string>
    <string name="head2">Recent Activities</string>
    <string name="reward">reward</string>
    <string name="reward1">"Recycled plastic bottles "</string>
    <string name="points_20">+20 Points</string>
    <string name="points_10">+10 Points</string>
    <string name="reward2">Carpooled to work</string>
    <string name="reward3">Used a reusable shopping bag</string>
    <string name="summary">Usage Summary:</string>
    <string name="topic">Your Impact!</string>
    <string name="set1">"Recycled Items: "</string>
    <string name="count20">150</string>
    <string name="set2">Water saved</string>
    <string name="countLitre">150Litres</string>
    <string name="set3">Energy saved</string>
    <string name="countPerc">12%</string>
    <string name="quickacc">Quick access</string>
    <string name="qa1">View Tips</string>
    <string name="qa2">Track new activity</string>
    <string name="qa3">Set new goal</string>
    <string name="tip1">Separate your waste into recyclables and non-recyclables.</string>
    <string name="cat1">Recycling</string>
    <string name="tip2">Fix leaking taps to save water.</string>
    <string name="cat2">Water Conservation</string>
    <string name="tip3">Turn off lights when not in use to save energy.</string>
    <string name="cat3">Energy Saving</string>
    <string name="tip4">Choose products with minimal packaging.</string>
    <string name="cat4">Sustainable Shopping</string>
    <string name="goal1">Reduce plastic use</string>
    <string name="date1">Due: Aug 31, 2024</string>
    <string name="goal2">Plant a tree every month</string>
    <string name="date2">Due: Dec 31, 2024</string>
    <string name="goal3">Use public transport</string>
    <string name="date3">Due: Aug 31, 2024</string>
    <string name="goal4">Start composting at home</string>
    <string name="date4">Due: Aug 31, 2024</string>
    <string name="eco_warrior">Eco-Warrior</string>
    <string name="recycled_100_items">Recycled 100 items</string>
    <string name="full_name">Full name</string>
    <string name="full_namet">Josep Adarw Rowan</string>
    <string name="address">address</string>
    <string name="addresst">17/2, jake lane, Nogate</string>
    <string name="city">City</string>
    <string name="cityt">New York</string>
    <string name="gender">Gender</string>
    <string name="Gendert">Male</string>
</resources>