<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/primary"
    tools:context=".LoginAvtivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/applogo1" />

        <TextView
            android:id="@+id/welcomeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:text="@string/welcomebacktxt"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/welcomeback" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/welcomeback"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_password"
                android:autofillHints=""
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:textColor="@color/white"
                android:backgroundTint="@color/button"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/newuser"
                android:textSize="18sp"
                android:textAlignment="center" />

        </LinearLayout>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>